small style fix to stop recipe pics overlapping and hover cards overlapping nav bar

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -505,7 +505,7 @@ footer {
 
     .card {
         width: 100%;
-        height: 25vh;
+        height: 28vh;
     }
     .card img {
         height: 134px;
@@ -516,6 +516,7 @@ footer {
         width: 301px;
         height: 260.76px;
         left: 4%;
+        top: -88%;
     }
 
     /*contact page 400px*/
